# Project-Maya

./: .gitignore  README.md
assembler/assembler/: Misc.swift  main.swift
assembler/assembler.xcodeproj/: project.pbxproj
assembler/assembler/Compiler/: AssemblerError.swift  BinaryStream.swift  Compiler.swift  ExecutableInitalizationHeader.swift  InputStream.swift  InstructionMap.swift  KeywordMap.swift  Lexer.swift  Linker.swift  Parser.swift  Token.swift  TokenExtractionFormat.swift
assembler/assembler/FileTypes/: FileTypes.swift  ObjectFile.swift
desktop-vm/: CMakeLists.txt  main.c  makefile
desktop-vm/headers/: binary_stream.h  error_t.h  fetch.h  init.h  instruction_t.h  instructions.h  macro.h  mem_io.h  operations.h  set.h  system_inteface.h  types.h  virtual_cpu.h  virtual_register.h
desktop-vm/source/: binary_stream.c  error_t.c  fetch.c  init.c  instruction_t.c  instructions.c  mem_io.c  operations.c  set.c  system_inteface.c  types.c  virtual_cpu.c  virtual_register.c
docs/: ISA New.xlsx  ISA.xlsx  ~$ISA.xlsx
virtual-machine/virtual-machine/: main.swift
virtual-machine/virtual-machine.xcodeproj/: project.pbxproj
virtual-machine/virtual-machine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
virtual-machine/virtual-machine/Extensions/: BoolExtension.swift  FixedWidthIntegerExtension.swift
workspace/: __init__.mia  __init__.mio  helloworld.mia  main.mia  main.mx  makefile  stdlib.mia  stdlib.mio  test.mia  test0.mia  testfile.mia  testfile.mia.out  testfile.mio
workspace/stdlib/: debug.mia  ioctl.mia  stdio.mia  stdlib.mia
(+22 files in other folders)
